# libint

./: .gitattributes  CHANGES  CITATION  CMakeLists.txt  INSTALL.md  LICENSE  README.md  configure.ac
.github/workflows/: build-g12-tarball.yml  build-python-wheels.yml  cmake.yml
cmake/: libint2-config.cmake.in
cmake/modules/: FindEigen3.cmake  int_am.cmake  int_checkboost.cmake  int_orderings.cmake  int_userreal.cmake
export/: CMakeLists.txt.export
export/cmake/: CMakeLists.txt.export
export/fortran/: fortran_example.F90  libint_f.F90  test-eri.cc  test.cc
export/python/: CMakeLists.txt  README.md  pyproject.toml
export/python/src/libint2/: basis.h  libint2.cc
export/python/tests/: test_hf.py  test_libint2.py
export/tests/hartree-fock/: hartree-fock++-validate.py  hartree-fock++.cc
export/tests/unit/: test-1body.cc  test-basis.cc
include/: libint2.h  libint2.hpp
include/libint2/: atom.h  basis.h.in  boys.h  boys_cheb7.h  boys_fwd.h  braket.h  cartesian.h  cgshell_ordering.h  cgshellinfo.h  config.h.cmake.in  config.h.in  cxxapi.h  deriv_iter.h  deriv_map.h  dfbs_generator.h  engine.h  engine.impl.h  initialize.h  numeric.h  pivoted_cholesky.h  shell.h  shgshell_ordering.h  soad_fock.h  statics_definition.h  tenno_cheb.h  tensor.h
include/libint2/chemistry/: elements.h  sto3g_atomic_density.h
include/libint2/lcao/: 1body.h  molden.h
include/libint2/util/: any.h  configuration.h  cxxstd.h  deprecated.h  intrinsic_operations.h  intrinsic_types.h  memory.h  optional.h  singleton.h  small_vector.h
tests/eri/: test.cc
tests/hartree-fock/: hartree-fock++.cc
tests/unit/: test-1body.cc  test-2body.cc  test-core.cc
(+17 files in other folders)
